feat!: prepare `GET /rooms/{room_id}/event` for invite code removal
* do not expose sensitive information
* indicate whether unregistered/uninvited users need to provide a password to join the room

closes #1467
