# crates/opentalk-controller-core/src/lib.rs
@@ -773,9 +773,6 @@ impl Controller {
             opentalk_types_common::assets::FileExtension,
             opentalk_types_common::auth::ResumptionToken,
             opentalk_types_common::auth::TicketToken,
-            opentalk_types_common::call_in::CallInId,
-            opentalk_types_common::call_in::CallInInfo,
-            opentalk_types_common::call_in::CallInPassword,
             opentalk_types_common::call_in::NumericId,
             opentalk_types_common::email::EmailAddress,
             opentalk_types_common::events::EventDescription,
